--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<div class="header">
-  <h1>Inaccessible Website</h1>
-  <div class="nav">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </div>
-</div>
-<div class="content" id="home">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saturn</title>
+</head>
+<body>
+
+
+    <!-- Header and navigation -->
+
+
+<header>
+    <h1>Inaccessible Website</h1>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<content>
   <img
     src="https://plus.unsplash.com/premium_photo-1717460700790-5199c828e0c7?q=80&w=1869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
   />
@@ -44,7 +58,7 @@
       </ol>
     </div>
   </div>
-</div>
+</content>
 <!-- Inaccessible Modal -->
 <div id="myModal" class="modal">
   <div class="modal-content">
@@ -60,3 +74,5 @@
 <div class="footer" id="contact">
   <p>© 2024 My Website</p>
 </div>
+</body>
+</html>
