--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           dust.
         </p>
       </section>
+
       <section>
         <h3>Moons of Saturn</h3>
         <p>
@@ -42,6 +43,7 @@
           planet Mercury.
         </p>
       </section>
+
       <section>
         <h3>Atmosphere of Saturn</h3>
         <p>
@@ -70,8 +72,10 @@
         </form>
       </div>
     </div>
-    <div class="footer" id="contact">
+
+    <!-- Footer -->
+    <footer id="contact">
       <p>© 2024 My Website</p>
-    </div>
+    </footer>
   </body>
 </html>
