--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
       <h1>Saturn</h1>
-      <nav aria-label="Main navigation">
+      <nav aria-label="Main navigation" role="navigation">
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -63,17 +63,28 @@
     <!-- Inaccessible Modal -->
     <div id="myModal" class="modal">
       <div class="modal-content">
-        <button class="close">&times;</button>
+        <button class="close" aria-label="Close modal" onclick="closeModal()">
+          ×
+        </button>
+
         <h2>Subscribe to our Newsletter</h2>
         <p>Get the latest updates about Saturn and other planets.</p>
+
         <form>
-          <input type="text" placeholder="Enter your email" />
+          <label for="emailInput">Enter your email:</label>
+          <input
+            id="emailInput"
+            type="email"
+            placeholder="Enter your email"
+            required
+          />
           <button type="submit">Subscribe</button>
         </form>
       </div>
     </div>
 
     <!-- Footer -->
+
     <footer id="contact">
       <p>© 2024 My Website</p>
     </footer>
