--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
     <footer id="contact">
       <p>© 2024 My Website</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
