--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <a id="home"></a>
     <!-- Header and navigation -->
 
     <header>
@@ -14,7 +15,7 @@
       <nav aria-label="Main navigation" role="navigation">
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#aboutSaturn">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -28,7 +29,9 @@
         src="https://plus.unsplash.com/premium_photo-1717460700790-5199c828e0c7?q=80&w=1869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of Saturn, the sixth planet from the Sun."
       />
-      <p>This is a sample paragraph. It contains some text about Saturn.</p>
+      <p id="aboutSaturn">
+        This is a sample paragraph. It contains some text about Saturn.
+      </p>
       <section>
         <h2>Saturn's Rings</h2>
         <p>
