--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         src="https://plus.unsplash.com/premium_photo-1717460700790-5199c828e0c7?q=80&w=1869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of Saturn, the sixth planet from the Sun."
       />
-      <p id="aboutSaturn">
-        This is a sample paragraph. It contains some text about Saturn.
-      </p>
+      <a id="aboutSaturn"></a>
+      <p>This is a sample paragraph. It contains some text about Saturn.</p>
       <section>
         <h2>Saturn's Rings</h2>
         <p>
@@ -65,14 +64,21 @@
       </section>
     </main>
 
-    <!-- Accessible Modal -->
-    <dialog id="myModal" aria-labelledby="modal-title">
+    <!-- Inaccessible Modal -->
+    <div
+      id="myModal"
+      class="modal"
+      role="dialog"
+      aria-labelledby="modal-title"
+      aria-modal="true"
+      tabindex="-1"
+    >
       <div class="modal-content">
         <button class="close" aria-label="Close modal" onclick="closeModal()">
           ×
         </button>
 
-        <h2 id="modal-title">Subscribe to our Newsletter</h2>
+        <h2>Subscribe to our Newsletter</h2>
         <p>Get the latest updates about Saturn and other planets.</p>
 
         <form>
@@ -86,7 +92,7 @@
           <button type="submit">Subscribe</button>
         </form>
       </div>
-    </dialog>
+    </div>
 
     <!-- Footer -->
 
