--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Add skip link -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
     <a id="home"></a>
     <!-- Header and navigation -->
 
@@ -14,24 +17,24 @@
       <h1>Saturn</h1>
       <nav aria-label="Main navigation" role="navigation">
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home" tabindex="0">Home</a></li>
+          <li><a href="#about" tabindex="0">About</a></li>
+          <li><a href="#contact" tabindex="0">Contact</a></li>
         </ul>
       </nav>
-      <button id="SubscribeButton">Subscribe</button>
+      <button id="SubscribeButton" tabindex="0">Subscribe</button>
     </header>
 
     <!-- Main content -->
 
-    <main>
+    <main id="main-content">
       <img
         src="https://plus.unsplash.com/premium_photo-1717460700790-5199c828e0c7?q=80&w=1869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of Saturn, the sixth planet from the Sun."
       />
       <a id="about"></a>
       <p>This is a sample paragraph. It contains some text about Saturn.</p>
-      <section>
+      <section tabindex="0">
         <h2>Saturn's Rings</h2>
         <p>
           Saturn is well known for its prominent ring system, which is composed
@@ -40,7 +43,7 @@
         </p>
       </section>
 
-      <section>
+      <section tabindex="0">
         <h3>Moons of Saturn</h3>
         <p>
           Saturn has 82 moons. The largest moon, Titan, is larger than the
@@ -48,7 +51,7 @@
         </p>
       </section>
 
-      <section>
+      <section tabindex="0">
         <h3>Atmosphere of Saturn</h3>
         <p>
           Saturn's atmosphere is primarily composed of hydrogen and helium, with
@@ -84,7 +87,7 @@
           <input
             id="emailInput"
             type="email"
-            placeholder="Enter your email"
+            placeholder="name@email.com"
             required
           />
           <button type="submit">Subscribe</button>
@@ -95,6 +98,7 @@
     <!-- Footer -->
 
     <footer id="contact">
+      <h2>Contact us</h2>
       <form id="contactForm" onsubmit="handleContactFormSubmit(event)">
         <label for="contactName">Name:</label>
         <input type="text" id="contactName" name="contactName" required />
