fixed anchor tags

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <!-- Add skip link -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
-    <a id="home"></a>
     <!-- Header and navigation -->
-
-    <header>
+    <header id="home">
       <h1>Saturn</h1>
       <button class="hamburger" aria-label="Toggle menu" aria-expanded="false">
         <span class="hamburger-line"></span>
@@ -33,14 +31,12 @@
     </header>
 
     <!-- Main content -->
-
     <main id="main-content">
       <img
         src="https://plus.unsplash.com/premium_photo-1717460700790-5199c828e0c7?q=80&w=1869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of Saturn, the sixth planet from the Sun."
       />
-      <a id="about"></a>
-      <section tabindex="0">
+      <section id="about" tabindex="0">
         <h1>About Saturn</h1>
         <p>This is a sample paragraph. It contains some text about Saturn.</p>
       </section>
@@ -106,7 +102,6 @@
     </dialog>
 
     <!-- Footer -->
-
     <footer id="contact">
       <h2>Contact us</h2>
       <form id="contactForm" onsubmit="handleContactFormSubmit(event)">
