--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Header and navigation -->
-    <header id="home">
-      <h1>Saturn</h1>
+    <header>
+      <h1 id="home">Saturn</h1>
       <button class="hamburger" aria-label="Toggle menu" aria-expanded="false">
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
