--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Header and navigation -->
     <header>
-      <h1 id="home">Saturn</h1>
+      <h1>Saturn</h1>
       <button class="hamburger" aria-label="Toggle menu" aria-expanded="false">
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
@@ -21,7 +21,7 @@
       <div class="nav-container">
         <nav aria-label="Main navigation" role="navigation">
           <ul>
-            <li><a href="#home" tabindex="0">Home</a></li>
+            <li><a href="#top" tabindex="0">Home</a></li>
             <li><a href="#about" tabindex="0">About</a></li>
             <li><a href="#contact" tabindex="0">Contact</a></li>
           </ul>
