--- a/exp.html
+++ b/exp.html
@@ -221,7 +221,8 @@ header {
           <h4>Understanding the Structure:</h4>
           <ul>
             <li>
-              <strong>First Child - h1:</strong> The main title of your website
+              <strong>First Child - h1:</strong> The main title/Logo of your
+              website
             </li>
             <li>
               <strong>Second Child - hamburger button:</strong> Only visible on
@@ -258,7 +259,7 @@ header {
         <h3>CSS for Header Children</h3>
         <p>Each child element in the header needs specific styling:</p>
 
-        <h4>1. Title Styling (h1):</h4>
+        <h4>1. Title/Logo Styling (h1):</h4>
         <pre><code>
 header h1 {
     font-size: 2.5rem;           /* Makes the title big */
